# libDwmWebUtils

./: .gitignore  ChangeLog  Makefile  Makefile.vars.in  configure  configure.ac  dwm.m4  getvers.sh  latest_release  mkrelease.sh
apps/: Makefile
apps/dwmfetch/: .gitignore  Makefile  dwmfetch.cc
classes/: Makefile
classes/include/: .gitignore  DwmWebUtils.hh  DwmWebUtilsGetFailure.hh  DwmWebUtilsUrl.hh  DwmWebUtilsVersion.hh.in  Makefile
classes/lib/: .gitignore
classes/src/: .gitignore  DwmWebUtils.cc  DwmWebUtilsGetFailure.cc  DwmWebUtilsUrl.lex  DwmWebUtilsVersion.cc  Makefile
classes/tests/: .gitignore  Makefile  TestGetJson.cc  TestGetResponse.cc  TestUrl.cc
packaging/: .gitignore  Makefile  debcontrol.in  fbsd_manifest.in  libDwmWebUtils.pc.in
